parameter updating functions completed

--- a/manualTrialNN.ipynb
+++ b/manualTrialNN.ipynb
@@ -254,7 +254,49 @@
    "source": [
     "def init_params():\n",
     "    w1 = np.random.rand(10,n-1)\n",
-    "    b1 = np.random.rand(10,1)"
+    "    b1 = np.random.rand(10,1)\n",
+    "    w2 = np.random.rand(10,10)\n",
+    "    b2 = np.random.rand(10,1)\n",
+    "    return b1,w1,b2,w2\n",
+    "\n",
+    "def ReLu(x):\n",
+    "    return np.maximum(0,x)\n",
+    "\n",
+    "def softMax(x):\n",
+    "    return np.exp(x)/np.sum(np.exp(x))\n",
+    "\n",
+    "def forward_prop(w1,b1,w2,b2,x):\n",
+    "    z1 = w1.dot(x) + b1\n",
+    "    a1 = ReLu(z1)\n",
+    "    z2 = w2.dot(z1) + b2\n",
+    "    a2 = softMax(z2)\n",
+    "    return z1,a1,z2,a2\n",
+    "\n",
+    "def deriv_ReLu(x):\n",
+    "    return x > 0\n",
+    "\n",
+    "def one_hot(y):\n",
+    "    oneHoty = np.zeros((y.size,y.max()+1))\n",
+    "    oneHoty[np.arange(y.size),y] = 1\n",
+    "    oneHoty = oneHoty.T\n",
+    "    return oneHoty\n",
+    "\n",
+    "def back_prop(z1,a1,z2,a2,x,y):\n",
+    "    oneHoty = one_hot(y)\n",
+    "    dZ2 = a2 - oneHoty\n",
+    "    dW2 = 1 / y.size * dZ2.dot(a1.T)\n",
+    "    dB2 = 1 / y.size * np.sum(dZ2)\n",
+    "    dZ1 = w2.T.dot(dZ2) * deriv_ReLu(z1)\n",
+    "    dW1 = 1 / y.size * dZ1.dot(x.T)\n",
+    "    dB1 = 1 / y.size * np.sum(dZ1)\n",
+    "    return dW1,dB1,dW2,dB2\n",
+    "\n",
+    "def update_params(w1,b1,w2,b2,dW1,dB1,dW2,dB2,alpha):\n",
+    "    w1 = w1 - dW1 * alpha\n",
+    "    b1 = b1 - dB1 * alpha\n",
+    "    w2 = w2 - dW2 * alpha\n",
+    "    b2 = b2 - dW2 * alpha\n",
+    "    return w1,b1,w2,b2"
    ]
   }
  ],
