gradient descent function and prediction accuracy functions added

--- a/manualTrialNN.ipynb
+++ b/manualTrialNN.ipynb
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "325731c2-29bf-4389-9d24-ca46faf1001d",
    "metadata": {},
    "outputs": [],
@@ -257,7 +257,7 @@
     "    b1 = np.random.rand(10,1)\n",
     "    w2 = np.random.rand(10,10)\n",
     "    b2 = np.random.rand(10,1)\n",
-    "    return b1,w1,b2,w2\n",
+    "    return w1,b1,w2,b2\n",
     "\n",
     "def ReLu(x):\n",
     "    return np.maximum(0,x)\n",
@@ -296,8 +296,34 @@
     "    b1 = b1 - dB1 * alpha\n",
     "    w2 = w2 - dW2 * alpha\n",
     "    b2 = b2 - dW2 * alpha\n",
+    "    return w1,b1,w2,b2\n",
+    "\n",
+    "def get_predictions(a2):\n",
+    "    return np.argmax(a2,0)\n",
+    "\n",
+    "def get_accuracy(predictions,y):\n",
+    "    print(predictions, y)\n",
+    "    return np.sum(predictions == y) / y.size\n",
+    "\n",
+    "def gradient_descent(x,y,nit,alpha):\n",
+    "    w1,b1,w2,b2 = init_params()\n",
+    "    for i in range(nit):\n",
+    "        z1,a1,z2,a2 = forward_prop(w1,b1,w2,b2,x)\n",
+    "        dW1,dB1,dW2,dB2 = back_prop(z1,a1,z2,a2,x,y)\n",
+    "        w1,b1,w2,b2 = update_params(w1,b1,w2,b2,dW1,dB1,dW2,dB2,alpha)\n",
+    "        if i % 50 == 0:\n",
+    "            print(\"Iteration: \", i)\n",
+    "            print(\"Accuracy: \", get_accuracy(get_predictions(a2),y))\n",
     "    return w1,b1,w2,b2"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b50bf3dc-fdf9-40a4-b624-d3f2ed327baf",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
