manual code completed, tested on training set and the NN working

--- a/manualTrialNN.ipynb
+++ b/manualTrialNN.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "9edff592-8453-4c99-b02d-3ce179732b75",
+   "metadata": {},
+   "source": [
+    "This code is taken from https://www.youtube.com/watch?v=w8yWXqWQYmU&t=1549s"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "da056b1a-7a4f-4b38-bb0b-bcaf81f422f1",
@@ -15,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "24e26ed8-6e71-429b-9cc2-e58c7d8b5de7",
    "metadata": {},
    "outputs": [
@@ -214,7 +222,7 @@
        "[5 rows x 785 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "3005d417-66ac-486d-aef5-14e5db265f90",
    "metadata": {},
    "outputs": [],
@@ -239,36 +247,38 @@
     "dfDev = df[0:1000].T\n",
     "yDev = dfDev[0]\n",
     "xDev = dfDev[1:n]\n",
+    "xDev = xDev/255.\n",
     "\n",
     "dfTrain = df[1000:m].T\n",
     "yTrain = dfTrain[0]\n",
-    "xTrain = dfTrain[1:n]"
+    "xTrain = dfTrain[1:n]\n",
+    "xTrain = xTrain/255."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "325731c2-29bf-4389-9d24-ca46faf1001d",
    "metadata": {},
    "outputs": [],
    "source": [
     "def init_params():\n",
-    "    w1 = np.random.rand(10,n-1)\n",
-    "    b1 = np.random.rand(10,1)\n",
-    "    w2 = np.random.rand(10,10)\n",
-    "    b2 = np.random.rand(10,1)\n",
+    "    w1 = np.random.rand(10,n-1)-0.5\n",
+    "    b1 = np.random.rand(10,1)-0.5\n",
+    "    w2 = np.random.rand(10,10)-0.5\n",
+    "    b2 = np.random.rand(10,1)-0.5\n",
     "    return w1,b1,w2,b2\n",
     "\n",
     "def ReLu(x):\n",
-    "    return np.maximum(0,x)\n",
+    "    return np.maximum(x,0,x)\n",
     "\n",
     "def softMax(x):\n",
-    "    return np.exp(x)/np.sum(np.exp(x))\n",
+    "    return np.exp(x)/sum(np.exp(x))\n",
     "\n",
     "def forward_prop(w1,b1,w2,b2,x):\n",
     "    z1 = w1.dot(x) + b1\n",
     "    a1 = ReLu(z1)\n",
-    "    z2 = w2.dot(z1) + b2\n",
+    "    z2 = w2.dot(a1) + b2\n",
     "    a2 = softMax(z2)\n",
     "    return z1,a1,z2,a2\n",
     "\n",
@@ -281,7 +291,7 @@
     "    oneHoty = oneHoty.T\n",
     "    return oneHoty\n",
     "\n",
-    "def back_prop(z1,a1,z2,a2,x,y):\n",
+    "def back_prop(z1,a1,z2,a2,w2,x,y):\n",
     "    oneHoty = one_hot(y)\n",
     "    dZ2 = a2 - oneHoty\n",
     "    dW2 = 1 / y.size * dZ2.dot(a1.T)\n",
@@ -295,7 +305,7 @@
     "    w1 = w1 - dW1 * alpha\n",
     "    b1 = b1 - dB1 * alpha\n",
     "    w2 = w2 - dW2 * alpha\n",
-    "    b2 = b2 - dW2 * alpha\n",
+    "    b2 = b2 - dB2 * alpha\n",
     "    return w1,b1,w2,b2\n",
     "\n",
     "def get_predictions(a2):\n",
@@ -309,7 +319,7 @@
     "    w1,b1,w2,b2 = init_params()\n",
     "    for i in range(nit):\n",
     "        z1,a1,z2,a2 = forward_prop(w1,b1,w2,b2,x)\n",
-    "        dW1,dB1,dW2,dB2 = back_prop(z1,a1,z2,a2,x,y)\n",
+    "        dW1,dB1,dW2,dB2 = back_prop(z1,a1,z2,a2,w2,x,y)\n",
     "        w1,b1,w2,b2 = update_params(w1,b1,w2,b2,dW1,dB1,dW2,dB2,alpha)\n",
     "        if i % 50 == 0:\n",
     "            print(\"Iteration: \", i)\n",
@@ -319,8 +329,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "b50bf3dc-fdf9-40a4-b624-d3f2ed327baf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration:  0\n",
+      "[4 4 4 ... 4 4 4] [2 7 0 ... 0 6 0]\n",
+      "Accuracy:  0.0951219512195122\n",
+      "Iteration:  50\n",
+      "[4 4 2 ... 0 5 0] [2 7 0 ... 0 6 0]\n",
+      "Accuracy:  0.44170731707317074\n",
+      "Iteration:  100\n",
+      "[4 4 6 ... 0 5 0] [2 7 0 ... 0 6 0]\n",
+      "Accuracy:  0.604\n",
+      "Iteration:  150\n",
+      "[4 9 6 ... 0 5 0] [2 7 0 ... 0 6 0]\n",
+      "Accuracy:  0.6979024390243902\n",
+      "Iteration:  200\n",
+      "[4 9 0 ... 0 5 0] [2 7 0 ... 0 6 0]\n",
+      "Accuracy:  0.752219512195122\n",
+      "Iteration:  250\n",
+      "[4 9 0 ... 0 5 0] [2 7 0 ... 0 6 0]\n",
+      "Accuracy:  0.7863902439024391\n",
+      "Iteration:  300\n",
+      "[4 9 0 ... 0 5 0] [2 7 0 ... 0 6 0]\n",
+      "Accuracy:  0.8097317073170732\n",
+      "Iteration:  350\n",
+      "[4 7 0 ... 0 5 0] [2 7 0 ... 0 6 0]\n",
+      "Accuracy:  0.8263414634146341\n",
+      "Iteration:  400\n",
+      "[4 7 0 ... 0 5 0] [2 7 0 ... 0 6 0]\n",
+      "Accuracy:  0.8374634146341463\n",
+      "Iteration:  450\n",
+      "[4 7 0 ... 0 5 0] [2 7 0 ... 0 6 0]\n",
+      "Accuracy:  0.8451951219512195\n",
+      "Iteration:  500\n",
+      "[4 7 0 ... 0 5 0] [2 7 0 ... 0 6 0]\n",
+      "Accuracy:  0.8525853658536585\n",
+      "Iteration:  550\n",
+      "[4 7 0 ... 0 5 0] [2 7 0 ... 0 6 0]\n",
+      "Accuracy:  0.858\n",
+      "Iteration:  600\n",
+      "[4 7 0 ... 0 8 0] [2 7 0 ... 0 6 0]\n",
+      "Accuracy:  0.8631463414634146\n",
+      "Iteration:  650\n",
+      "[4 7 0 ... 0 8 0] [2 7 0 ... 0 6 0]\n",
+      "Accuracy:  0.8675365853658537\n",
+      "Iteration:  700\n",
+      "[9 7 0 ... 0 8 0] [2 7 0 ... 0 6 0]\n",
+      "Accuracy:  0.8718780487804878\n",
+      "Iteration:  750\n",
+      "[9 7 0 ... 0 8 0] [2 7 0 ... 0 6 0]\n",
+      "Accuracy:  0.8749024390243902\n",
+      "Iteration:  800\n",
+      "[9 7 0 ... 0 8 0] [2 7 0 ... 0 6 0]\n",
+      "Accuracy:  0.8773170731707317\n",
+      "Iteration:  850\n",
+      "[9 7 0 ... 0 8 0] [2 7 0 ... 0 6 0]\n",
+      "Accuracy:  0.8801707317073171\n",
+      "Iteration:  900\n",
+      "[9 7 0 ... 0 8 0] [2 7 0 ... 0 6 0]\n",
+      "Accuracy:  0.8825609756097561\n",
+      "Iteration:  950\n",
+      "[9 7 0 ... 0 8 0] [2 7 0 ... 0 6 0]\n",
+      "Accuracy:  0.8846585365853659\n"
+     ]
+    }
+   ],
+   "source": [
+    "w1,b1,w2,b2 = gradient_descent(xTrain, yTrain, 1000, 0.1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "26d61c56-c4f5-4499-a2b4-128b899cbf3d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "83a23770-ba75-456c-b415-790526f8cbb4",
    "metadata": {},
    "outputs": [],
    "source": []
