--- a/manualTrialNN.ipynb
+++ b/manualTrialNN.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "id": "da056b1a-7a4f-4b38-bb0b-bcaf81f422f1",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "id": "24e26ed8-6e71-429b-9cc2-e58c7d8b5de7",
    "metadata": {},
    "outputs": [
@@ -222,7 +222,7 @@
        "[5 rows x 785 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "id": "3005d417-66ac-486d-aef5-14e5db265f90",
    "metadata": {},
    "outputs": [],
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 30,
    "id": "325731c2-29bf-4389-9d24-ca46faf1001d",
    "metadata": {},
    "outputs": [],
@@ -321,7 +321,7 @@
     "        z1,a1,z2,a2 = forward_prop(w1,b1,w2,b2,x)\n",
     "        dW1,dB1,dW2,dB2 = back_prop(z1,a1,z2,a2,w2,x,y)\n",
     "        w1,b1,w2,b2 = update_params(w1,b1,w2,b2,dW1,dB1,dW2,dB2,alpha)\n",
-    "        if i % 50 == 0:\n",
+    "        if i % 250 == 0:\n",
     "            print(\"Iteration: \", i)\n",
     "            print(\"Accuracy: \", get_accuracy(get_predictions(a2),y))\n",
     "    return w1,b1,w2,b2"
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 32,
    "id": "b50bf3dc-fdf9-40a4-b624-d3f2ed327baf",
    "metadata": {},
    "outputs": [
@@ -338,84 +338,97 @@
      "output_type": "stream",
      "text": [
       "Iteration:  0\n",
-      "[4 4 4 ... 4 4 4] [2 7 0 ... 0 6 0]\n",
-      "Accuracy:  0.0951219512195122\n",
-      "Iteration:  50\n",
-      "[4 4 2 ... 0 5 0] [2 7 0 ... 0 6 0]\n",
-      "Accuracy:  0.44170731707317074\n",
-      "Iteration:  100\n",
-      "[4 4 6 ... 0 5 0] [2 7 0 ... 0 6 0]\n",
-      "Accuracy:  0.604\n",
-      "Iteration:  150\n",
-      "[4 9 6 ... 0 5 0] [2 7 0 ... 0 6 0]\n",
-      "Accuracy:  0.6979024390243902\n",
-      "Iteration:  200\n",
-      "[4 9 0 ... 0 5 0] [2 7 0 ... 0 6 0]\n",
-      "Accuracy:  0.752219512195122\n",
+      "[2 2 4 ... 8 6 1] [0 8 2 ... 9 9 1]\n",
+      "Accuracy:  0.11748780487804877\n",
       "Iteration:  250\n",
-      "[4 9 0 ... 0 5 0] [2 7 0 ... 0 6 0]\n",
-      "Accuracy:  0.7863902439024391\n",
-      "Iteration:  300\n",
-      "[4 9 0 ... 0 5 0] [2 7 0 ... 0 6 0]\n",
-      "Accuracy:  0.8097317073170732\n",
-      "Iteration:  350\n",
-      "[4 7 0 ... 0 5 0] [2 7 0 ... 0 6 0]\n",
-      "Accuracy:  0.8263414634146341\n",
-      "Iteration:  400\n",
-      "[4 7 0 ... 0 5 0] [2 7 0 ... 0 6 0]\n",
-      "Accuracy:  0.8374634146341463\n",
-      "Iteration:  450\n",
-      "[4 7 0 ... 0 5 0] [2 7 0 ... 0 6 0]\n",
-      "Accuracy:  0.8451951219512195\n",
+      "[0 8 2 ... 9 9 1] [0 8 2 ... 9 9 1]\n",
+      "Accuracy:  0.8000731707317074\n",
       "Iteration:  500\n",
-      "[4 7 0 ... 0 5 0] [2 7 0 ... 0 6 0]\n",
-      "Accuracy:  0.8525853658536585\n",
-      "Iteration:  550\n",
-      "[4 7 0 ... 0 5 0] [2 7 0 ... 0 6 0]\n",
-      "Accuracy:  0.858\n",
-      "Iteration:  600\n",
-      "[4 7 0 ... 0 8 0] [2 7 0 ... 0 6 0]\n",
-      "Accuracy:  0.8631463414634146\n",
-      "Iteration:  650\n",
-      "[4 7 0 ... 0 8 0] [2 7 0 ... 0 6 0]\n",
-      "Accuracy:  0.8675365853658537\n",
-      "Iteration:  700\n",
-      "[9 7 0 ... 0 8 0] [2 7 0 ... 0 6 0]\n",
-      "Accuracy:  0.8718780487804878\n",
+      "[0 8 2 ... 9 9 1] [0 8 2 ... 9 9 1]\n",
+      "Accuracy:  0.8508536585365853\n",
       "Iteration:  750\n",
-      "[9 7 0 ... 0 8 0] [2 7 0 ... 0 6 0]\n",
-      "Accuracy:  0.8749024390243902\n",
-      "Iteration:  800\n",
-      "[9 7 0 ... 0 8 0] [2 7 0 ... 0 6 0]\n",
-      "Accuracy:  0.8773170731707317\n",
-      "Iteration:  850\n",
-      "[9 7 0 ... 0 8 0] [2 7 0 ... 0 6 0]\n",
-      "Accuracy:  0.8801707317073171\n",
-      "Iteration:  900\n",
-      "[9 7 0 ... 0 8 0] [2 7 0 ... 0 6 0]\n",
-      "Accuracy:  0.8825609756097561\n",
-      "Iteration:  950\n",
-      "[9 7 0 ... 0 8 0] [2 7 0 ... 0 6 0]\n",
-      "Accuracy:  0.8846585365853659\n"
+      "[0 8 2 ... 9 9 1] [0 8 2 ... 9 9 1]\n",
+      "Accuracy:  0.8708780487804878\n",
+      "Iteration:  1000\n",
+      "[0 8 2 ... 9 9 1] [0 8 2 ... 9 9 1]\n",
+      "Accuracy:  0.8819512195121951\n",
+      "Iteration:  1250\n",
+      "[0 8 2 ... 9 9 1] [0 8 2 ... 9 9 1]\n",
+      "Accuracy:  0.889\n",
+      "Iteration:  1500\n",
+      "[0 8 2 ... 9 9 1] [0 8 2 ... 9 9 1]\n",
+      "Accuracy:  0.8953658536585366\n",
+      "Iteration:  1750\n",
+      "[0 8 2 ... 9 9 1] [0 8 2 ... 9 9 1]\n",
+      "Accuracy:  0.8999024390243903\n",
+      "Iteration:  2000\n",
+      "[0 8 2 ... 9 9 1] [0 8 2 ... 9 9 1]\n",
+      "Accuracy:  0.9027317073170732\n",
+      "Iteration:  2250\n",
+      "[0 8 2 ... 9 9 1] [0 8 2 ... 9 9 1]\n",
+      "Accuracy:  0.9061707317073171\n",
+      "Iteration:  2500\n",
+      "[0 8 2 ... 9 9 1] [0 8 2 ... 9 9 1]\n",
+      "Accuracy:  0.9087560975609756\n",
+      "Iteration:  2750\n",
+      "[0 8 2 ... 9 9 1] [0 8 2 ... 9 9 1]\n",
+      "Accuracy:  0.9107073170731708\n",
+      "Iteration:  3000\n",
+      "[0 8 2 ... 9 9 1] [0 8 2 ... 9 9 1]\n",
+      "Accuracy:  0.9129268292682927\n",
+      "Iteration:  3250\n",
+      "[0 8 2 ... 9 9 1] [0 8 2 ... 9 9 1]\n",
+      "Accuracy:  0.9147804878048781\n",
+      "Iteration:  3500\n",
+      "[0 8 2 ... 9 9 1] [0 8 2 ... 9 9 1]\n",
+      "Accuracy:  0.9163170731707317\n",
+      "Iteration:  3750\n",
+      "[0 8 2 ... 9 9 1] [0 8 2 ... 9 9 1]\n",
+      "Accuracy:  0.918\n",
+      "Iteration:  4000\n",
+      "[0 8 2 ... 9 9 1] [0 8 2 ... 9 9 1]\n",
+      "Accuracy:  0.9196341463414635\n",
+      "Iteration:  4250\n",
+      "[0 8 2 ... 9 9 1] [0 8 2 ... 9 9 1]\n",
+      "Accuracy:  0.9211951219512196\n",
+      "Iteration:  4500\n",
+      "[0 8 2 ... 9 9 1] [0 8 2 ... 9 9 1]\n",
+      "Accuracy:  0.9227073170731708\n",
+      "Iteration:  4750\n",
+      "[0 8 2 ... 9 9 1] [0 8 2 ... 9 9 1]\n",
+      "Accuracy:  0.923829268292683\n"
      ]
     }
    ],
    "source": [
-    "w1,b1,w2,b2 = gradient_descent(xTrain, yTrain, 1000, 0.1)"
+    "w1,b1,w2,b2 = gradient_descent(xTrain, yTrain, 5000, 0.1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "26d61c56-c4f5-4499-a2b4-128b899cbf3d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfTest = pd.read_csv(dir+'\\\\test.csv')\n",
+    "dfTest = np.array(dfTest)\n",
+    "m,n = dfTest.shape\n",
+    "\n",
+    "xTest = dfTest.T\n",
+    "xTest = xTest/255.\n",
+    "\n",
+    "z1,a1,z2,a2 = forward_prop(w1,b1,w2,b2,xTest)\n",
+    "pred = get_predictions(a2)\n",
+    "\n",
+    "submission_df = pd.DataFrame({\"ImageId\": np.arange(1,len(pred)+1), \"Label\": pred})\n",
+    "submission_df.to_csv(\"submission.csv\", index=False)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26d61c56-c4f5-4499-a2b4-128b899cbf3d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "83a23770-ba75-456c-b415-790526f8cbb4",
+   "id": "4c84f561-694d-4563-b731-cd65803d4286",
    "metadata": {},
    "outputs": [],
    "source": []
