a new NN model file is created using OO

--- a/manualTrialNN.ipynb
+++ b/manualTrialNN.ipynb
@@ -5,7 +5,9 @@
    "id": "9edff592-8453-4c99-b02d-3ce179732b75",
    "metadata": {},
    "source": [
-    "This code is taken from https://www.youtube.com/watch?v=w8yWXqWQYmU&t=1549s"
+    "This code is taken from https://www.youtube.com/watch?v=w8yWXqWQYmU&t=1549s.\n",
+    "\n",
+    "It is a NN with 2 layers with functions written manually."
    ]
   },
   {
@@ -422,16 +424,8 @@
     "pred = get_predictions(a2)\n",
     "\n",
     "submission_df = pd.DataFrame({\"ImageId\": np.arange(1,len(pred)+1), \"Label\": pred})\n",
-    "submission_df.to_csv(\"submission.csv\", index=False)"
+    "submission_df.to_csv(\"submissionNNmanual.csv\", index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4c84f561-694d-4563-b731-cd65803d4286",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
