ReLu activation function is added and tested

--- a/manualTrialNN_classApproach.ipynb
+++ b/manualTrialNN_classApproach.ipynb
@@ -10,34 +10,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 29,
    "id": "007ceca1-8e2c-4016-8040-364a5ea3f016",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'tensorflow'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[161], line 4\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mos\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[1;32m----> 4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtensorflow\u001b[39;00m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'tensorflow'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import os\n",
-    "import pandas as pd\n",
-    "import tensorflow"
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 31,
    "id": "21a3760e-6bb2-4b37-ac94-579ec078adf3",
    "metadata": {},
    "outputs": [],
@@ -57,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 33,
    "id": "aef98b35-abd3-4fc0-8df3-021c5dc341e7",
    "metadata": {},
    "outputs": [],
@@ -85,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 35,
    "id": "f4c715c6-c8e2-48d2-85a3-5365ab98dd59",
    "metadata": {},
    "outputs": [],
@@ -107,7 +94,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 92,
+   "id": "40a3ab7a-2812-43ee-9c48-d8dce9f5b690",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Softmax Layer Class\n",
+    "class Softmax(Layer):\n",
+    "    def forward(self, input):\n",
+    "        tmp = np.exp(input)\n",
+    "        self.output = tmp / np.sum(tmp)\n",
+    "        return self.output\n",
+    "    \n",
+    "    def backward(self, output_gradient, learning_rate):\n",
+    "        n = np.size(self.output)\n",
+    "        return np.dot((np.identity(n) - self.output.T) * self.output, output_gradient)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
    "id": "9b4ebb98-5fd7-4d41-a245-719cbb10d06b",
    "metadata": {},
    "outputs": [],
@@ -117,12 +123,18 @@
     "    return np.tanh(x)\n",
     "\n",
     "def tanh_prime(x):\n",
-    "    return 1-np.tanh(x)**2"
+    "    return 1-np.tanh(x)**2\n",
+    "\n",
+    "def ReLu(x):\n",
+    "    return np.maximum(x,0,x)\n",
+    "\n",
+    "def ReLu_prime(x):\n",
+    "    return x > 0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 41,
    "id": "32081b7a-8bbb-477d-abdf-d062f995e3b0",
    "metadata": {},
    "outputs": [],
@@ -137,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 107,
    "id": "a6081f7b-793f-4b4d-a100-30862218d1f1",
    "metadata": {},
    "outputs": [],
@@ -191,13 +203,13 @@
     "\n",
     "            # calculate average error on all samples\n",
     "            err /= samples\n",
-    "            if i % 500 == 0:\n",
+    "            if i % 5 == 0:\n",
     "                print('epoch %d/%d   error=%f' % (i+1, epochs, err))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 56,
    "id": "1a2fbc0c-ef04-4c54-b006-8423a4dad6c2",
    "metadata": {},
    "outputs": [
@@ -205,17 +217,57 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "epoch 1/5000   error=0.783604\n",
-      "epoch 501/5000   error=0.000799\n",
-      "epoch 1001/5000   error=0.000265\n",
-      "epoch 1501/5000   error=0.000153\n",
-      "epoch 2001/5000   error=0.000106\n",
-      "epoch 2501/5000   error=0.000083\n",
-      "epoch 3001/5000   error=0.000066\n",
-      "epoch 3501/5000   error=0.000055\n",
-      "epoch 4001/5000   error=0.000047\n",
-      "epoch 4501/5000   error=0.000041\n",
-      "[array([[0.00031195]]), array([[0.99287769]]), array([[0.99025062]]), array([[0.0004473]])]\n"
+      "epoch 1/5000   error=0.980193\n",
+      "epoch 101/5000   error=0.232435\n",
+      "epoch 201/5000   error=0.210408\n",
+      "epoch 301/5000   error=0.048100\n",
+      "epoch 401/5000   error=0.002567\n",
+      "epoch 501/5000   error=0.001146\n",
+      "epoch 601/5000   error=0.000715\n",
+      "epoch 701/5000   error=0.000513\n",
+      "epoch 801/5000   error=0.000397\n",
+      "epoch 901/5000   error=0.000322\n",
+      "epoch 1001/5000   error=0.000270\n",
+      "epoch 1101/5000   error=0.000232\n",
+      "epoch 1201/5000   error=0.001391\n",
+      "epoch 1301/5000   error=0.000186\n",
+      "epoch 1401/5000   error=0.000166\n",
+      "epoch 1501/5000   error=0.000150\n",
+      "epoch 1601/5000   error=0.000136\n",
+      "epoch 1701/5000   error=0.000125\n",
+      "epoch 1801/5000   error=0.000116\n",
+      "epoch 1901/5000   error=0.000251\n",
+      "epoch 2001/5000   error=0.000131\n",
+      "epoch 2101/5000   error=0.000096\n",
+      "epoch 2201/5000   error=0.000090\n",
+      "epoch 2301/5000   error=0.000085\n",
+      "epoch 2401/5000   error=0.000080\n",
+      "epoch 2501/5000   error=0.000078\n",
+      "epoch 2601/5000   error=0.000255\n",
+      "epoch 2701/5000   error=0.000106\n",
+      "epoch 2801/5000   error=0.000068\n",
+      "epoch 2901/5000   error=0.000064\n",
+      "epoch 3001/5000   error=0.000061\n",
+      "epoch 3101/5000   error=0.000059\n",
+      "epoch 3201/5000   error=0.000064\n",
+      "epoch 3301/5000   error=0.000197\n",
+      "epoch 3401/5000   error=0.000087\n",
+      "epoch 3501/5000   error=0.000053\n",
+      "epoch 3601/5000   error=0.000049\n",
+      "epoch 3701/5000   error=0.000048\n",
+      "epoch 3801/5000   error=0.000047\n",
+      "epoch 3901/5000   error=0.000055\n",
+      "epoch 4001/5000   error=0.000132\n",
+      "epoch 4101/5000   error=0.000084\n",
+      "epoch 4201/5000   error=0.000046\n",
+      "epoch 4301/5000   error=0.000041\n",
+      "epoch 4401/5000   error=0.000039\n",
+      "epoch 4501/5000   error=0.000039\n",
+      "epoch 4601/5000   error=0.000044\n",
+      "epoch 4701/5000   error=0.000081\n",
+      "epoch 4801/5000   error=0.000091\n",
+      "epoch 4901/5000   error=0.000046\n",
+      "[array([[0.000182]]), array([[0.99193408]]), array([[0.99190649]]), array([[0.00334895]])]\n"
      ]
     }
    ],
@@ -243,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 76,
    "id": "a8132b02-a13e-477e-83df-e1fc667d2372",
    "metadata": {},
    "outputs": [],
@@ -261,13 +313,13 @@
     "\n",
     "xTrain = df[1:n].T\n",
     "xTrain = xTrain.reshape(xTrain.shape[0], 1, 28*28)\n",
-    "x_train = x_train.astype('float32')\n",
-    "x_train /= 255"
+    "xTrain = xTrain.astype('float32')\n",
+    "xTrain /= 255"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": null,
    "id": "7bbaf078-e40a-4dda-9486-1ea84b412008",
    "metadata": {},
    "outputs": [
@@ -275,31 +327,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "epoch 1/10   error=0.113038\n",
-      "epoch 2/10   error=0.095842\n",
-      "epoch 3/10   error=0.087705\n",
-      "epoch 4/10   error=0.084090\n",
-      "epoch 5/10   error=0.084980\n",
-      "epoch 6/10   error=0.080099\n",
-      "epoch 7/10   error=0.078800\n",
-      "epoch 8/10   error=0.079448\n",
-      "epoch 9/10   error=0.078286\n",
-      "epoch 10/10   error=0.074685\n"
+      "epoch 1/50   error=0.138049\n",
+      "epoch 6/50   error=0.090866\n",
+      "epoch 11/50   error=0.080030\n",
+      "epoch 16/50   error=0.045277\n",
+      "epoch 21/50   error=0.034865\n",
+      "epoch 26/50   error=0.033630\n",
+      "epoch 31/50   error=0.031743\n",
+      "epoch 36/50   error=0.024572\n",
+      "epoch 41/50   error=0.015624\n",
+      "epoch 46/50   error=0.014745\n"
      ]
     }
    ],
    "source": [
     "# Network\n",
     "net = Network()\n",
-    "net.add(Dense(28*28, 100))                # input_shape=(1, 28*28)    ;   output_shape=(1, 100)\n",
-    "net.add(Activation(tanh, tanh_prime))\n",
-    "net.add(Dense(100, 50))                   # input_shape=(1, 100)      ;   output_shape=(1, 50)\n",
-    "net.add(Activation(tanh, tanh_prime))\n",
-    "net.add(Dense(50, 10))                    # input_shape=(1, 50)       ;   output_shape=(1, 10)\n",
+    "net.add(Dense(28*28, 100))            \n",
+    "net.add(Activation(ReLu, ReLu_prime))\n",
+    "net.add(Dense(100, 50))                 \n",
+    "net.add(Activation(ReLu, ReLu_prime))\n",
+    "net.add(Dense(50, 10))                 \n",
     "net.add(Activation(tanh, tanh_prime))\n",
     "\n",
     "net.use(mse, mse_prime)\n",
-    "net.fit(xTrain, yTrain, epochs=5000, learning_rate=0.1)"
+    "net.fit(xTrain, yTrain, epochs=50, learning_rate=0.1)"
    ]
   },
   {
