NN submission made with 2 hidden layers and 100 iterations for GD

--- a/manualTrialNN_classApproach.ipynb
+++ b/manualTrialNN_classApproach.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "id": "007ceca1-8e2c-4016-8040-364a5ea3f016",
    "metadata": {
     "scrolled": true
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "id": "21a3760e-6bb2-4b37-ac94-579ec078adf3",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "id": "aef98b35-abd3-4fc0-8df3-021c5dc341e7",
    "metadata": {},
    "outputs": [],
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 7,
    "id": "f4c715c6-c8e2-48d2-85a3-5365ab98dd59",
    "metadata": {},
    "outputs": [],
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 9,
    "id": "40a3ab7a-2812-43ee-9c48-d8dce9f5b690",
    "metadata": {},
    "outputs": [],
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 11,
    "id": "9b4ebb98-5fd7-4d41-a245-719cbb10d06b",
    "metadata": {},
    "outputs": [],
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 13,
    "id": "32081b7a-8bbb-477d-abdf-d062f995e3b0",
    "metadata": {},
    "outputs": [],
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 15,
    "id": "a6081f7b-793f-4b4d-a100-30862218d1f1",
    "metadata": {},
    "outputs": [],
@@ -203,7 +203,7 @@
     "\n",
     "            # calculate average error on all samples\n",
     "            err /= samples\n",
-    "            if i % 5 == 0:\n",
+    "            if i % 10 == 0:\n",
     "                print('epoch %d/%d   error=%f' % (i+1, epochs, err))"
    ]
   },
@@ -295,13 +295,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 19,
    "id": "a8132b02-a13e-477e-83df-e1fc667d2372",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Train with MNIST\n",
-    "# get data\n",
+    "# get training data\n",
     "dir = os.getcwd() + '\\\\data'\n",
     "df = pd.read_csv(dir+'\\\\train.csv')\n",
     "\n",
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "7bbaf078-e40a-4dda-9486-1ea84b412008",
    "metadata": {},
    "outputs": [
@@ -327,16 +327,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "epoch 1/50   error=0.138049\n",
-      "epoch 6/50   error=0.090866\n",
-      "epoch 11/50   error=0.080030\n",
-      "epoch 16/50   error=0.045277\n",
-      "epoch 21/50   error=0.034865\n",
-      "epoch 26/50   error=0.033630\n",
-      "epoch 31/50   error=0.031743\n",
-      "epoch 36/50   error=0.024572\n",
-      "epoch 41/50   error=0.015624\n",
-      "epoch 46/50   error=0.014745\n"
+      "epoch 1/100   error=0.110276\n",
+      "epoch 11/100   error=0.026638\n",
+      "epoch 21/100   error=0.015313\n",
+      "epoch 31/100   error=0.014019\n",
+      "epoch 41/100   error=0.013351\n",
+      "epoch 51/100   error=0.003001\n",
+      "epoch 61/100   error=0.002287\n",
+      "epoch 71/100   error=0.001851\n",
+      "epoch 81/100   error=0.001890\n",
+      "epoch 91/100   error=0.001511\n"
      ]
     }
    ],
@@ -351,13 +351,39 @@
     "net.add(Activation(tanh, tanh_prime))\n",
     "\n",
     "net.use(mse, mse_prime)\n",
-    "net.fit(xTrain, yTrain, epochs=50, learning_rate=0.1)"
+    "net.fit(xTrain, yTrain, epochs=100, learning_rate=0.1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "id": "15d7c626-fa89-4611-b81b-e9fb6a71cc51",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Test with MNIST\n",
+    "# get test data\n",
+    "dir = os.getcwd() + '\\\\data'\n",
+    "df = pd.read_csv(dir+'\\\\test.csv')\n",
+    "\n",
+    "xTest = np.array(df)\n",
+    "m,n = xTest.shape\n",
+    "\n",
+    "xTest = xTest.reshape(m, 1, 28*28)\n",
+    "xTest = xTest.astype('float32')\n",
+    "xTest /= 255\n",
+    "\n",
+    "pred = net.predict(xTest)\n",
+    "pred = np.array([item.argmax() for item in pred])\n",
+    "\n",
+    "submission_df = pd.DataFrame({\"ImageId\": np.arange(1,len(pred)+1), \"Label\": pred})\n",
+    "submission_df.to_csv(\"submissionNNmanual_OO.csv\", index=False)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15d7c626-fa89-4611-b81b-e9fb6a71cc51",
+   "id": "238234d4-8563-4b83-af11-6be5ac2d41a0",
    "metadata": {},
    "outputs": [],
    "source": []
